--- a/config-data/ms-gateway-service.yml
+++ b/config-data/ms-gateway-service.yml
@@ -7,8 +7,8 @@ eureka:
       #defaultZone: http://localhost:8090/eureka
       defaultZone: ${EUREKA_URI:http://localhost:8090/eureka}
   instance:
-      #hostname: Localhost
-      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    #hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 spring:
   cloud:
@@ -20,7 +20,7 @@ spring:
         - id: ms-catalogo-service
           uri: lb://ms-catalogo-service
           predicates:
-            - Path=/categoria/**, /producto/**
+            - Path=/categoria/*, /producto/*
         - id: ms-cliente-service
           uri: lb://ms-cliente-service
           predicates:
@@ -28,5 +28,4 @@ spring:
         - id: ms-pedido-service
           uri: lb://ms-pedido-service
           predicates:
-            - Path=/pedido/**, /pedidodetalle/**
-
+            - Path=/pedido/*, /pedidodetalle/*
